--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Wallpaper Picker</title>
+  <title>Annie Wallpaper Picker</title>
   <link rel="stylesheet" href="style.css" />
   <meta name="color-scheme" content="light dark">
 </head>
